jade/tests/snapshots/e2e__emulator__version.snap
---
source: jade/test/emulator.rs
expression: result
---
JADE_VERSION: "1"
JADE_OTA_MAX_CHUNK: 4096
JADE_CONFIG: NORADIO
BOARD_TYPE: DEV
JADE_FEATURES: DEV
IDF_VERSION: v5.0.2
CHIP_FEATURES: "32000000"
EFUSEMAC: "000000000000"
BATTERY_STATUS: 0
JADE_STATE: UNINIT
JADE_NETWORKS: ALL
JADE_HAS_PIN: false

